<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:id="@+id/MainActivityLayout"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent" android:background="#BF000000">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/button2"
            android:layout_width="124dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="#E91E63"
            android:text="@string/listelerim_but"
            android:textAllCaps="false"/>

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="#E91E63"
            android:onClick="goToYemekTarif"
            android:text="@string/yemek_tarif_but"
            android:textAllCaps="false"/>

        <Button
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="#E91E63"
            android:onClick="goToKalori"
            android:text="@string/kalori_hesaplayıcı_but"
            android:textAllCaps="false"/>
    </LinearLayout>

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/custom_button"
        android:onClick="createNewList"
        android:text="@string/yeniliste_but"
        android:textAllCaps="false"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/recyclerViewText"
        android:layout_width="375dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:clickable="false"
        android:contextClickable="false"
        android:text="@string/listelerim"
        android:textColor="#FFFFFF"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/ListerecyclerView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/ListerecyclerView"
        android:layout_width="405dp"
        android:layout_height="382dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/button5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>