<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#bf000000">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="10dp"
        tools:layout_editor_absoluteX="79dp"
        tools:layout_editor_absoluteY="104dp">

        <ImageView
            android:id="@+id/tarifImageView"
            android:layout_width="match_parent"
            android:layout_height="218dp" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="328dp">

            <TextView
                android:id="@+id/tarifText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:paddingStart="5dp"
                android:textColor="#FFFFFF"
                android:textSize="18sp" />
        </ScrollView>

        <Button
            android:id="@+id/button25"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#8E24AA"
            android:onClick="addMalzeme"
            android:text="@string/malzemeekle_but"
            android:textAllCaps="false"
            android:textSize="18sp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>