...
            android:onClick="addProduct"
            android:text="@string/ürünekle_but"
            android:textAllCaps="false"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#FF0000"
            android:onClick="deleteList"
            android:text="@string/listeyisil_but"
            android:textAllCaps="false"
...
        android:layout_marginTop="2dp"
        android:paddingStart="20dp"
        android:text="@string/alinanürünler"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listeIcerikrecyclerView" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/listeIcerikrecyclerView"
        android:layout_width="409dp"
        android:layout_height="380dp"
        android:layout_marginBottom="1dp"
...
